<resources>
    <string name="app_name">DebateMates</string>
    <string name="facebook_app_id">1557647357715015</string>
    <string name="fb_login_protocol_scheme">fb1557647357715015</string>
    <string name="connecting_label">Connecting</string>
    <string name="finding_match">FINDING MATCH</string>
    <string name="waiting_for_players">WAITING FOR PLAYERS…</string>

    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="debate_mate">Debate Mate</string>
    <string name="find_game">Finding Game</string>
    <string name="find_match">FIND A MATCH</string>
    <string name="judge_match">JUDGE A MATCH</string>
    <string name="spectate_match">WATCH A MATCH</string>

    <string name="continueLabel">Continue</string>
    <string name="winLabel">You Win!</string>
    <string name="loseLabel">You Lose!</string>

    <string name="confirm_questions">Confirm</string>
    <string name="cancel_questions">Cancel</string>

    <string name="change_question_preferences">Change Question Preferences</string>
    <string name="other_setting">Other Setting</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="ok">OK</string>
    <string name="nickname">Nickname</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>

</resources>

